be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtapi
      tier: backend
  template:
    metadata:
      labels:
        app: dtapi
        tier: backend
    spec:
      containers:
      - name: api
        image: eu.gcr.io/trainingground-285720/be
        ports:
        - containerPort: 80
