db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: default
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: database
  template:
    metadata:
      labels:
        app: dtapi
        tier: database
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "true"
        - name: MYSQL_DATABASE
          value: dtapi
        - name: MYSQL_USER
          value: dtapi
        - name: MYSQL_PASSWORD
          value: password
        name: db
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-pv-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-pv-volume
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
