be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: dtapi
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dtapi
    tier: backend
