db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: dtapi
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: dtapi
    tier: backend
