ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dtapi-k8s
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: be
          servicePort: 80
      - path: /*
        backend:
          serviceName: fe
          servicePort: 80
